--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
-    font-family: Poppins;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body {
+    font-family: Poppins, sans-serif;
     margin: 0;
     background-color: #010101;
     color: #eee;
 }
-svg{
+
+svg {
     width: 25px;
 }
-header{
+
+header {
     width: 1200px;
     max-width: 90%;
     margin: auto;
@@ -20,10 +23,12 @@ header{
     position: relative;
     z-index: 100;
 }
-header .logo{
+
+header .logo {
     font-weight: bold;
 }
-header .menu{
+
+header .menu {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -32,83 +37,173 @@ header .menu{
     gap: 20px;
     font-weight: 500;
 }
-/* css slider */
-.slider{
+
+header .menu li a {
+    text-decoration: none; 
+    color: #eee; 
+    font-weight: bold;
+    padding: 10px 15px; 
+    transition: color 0.3s ease; 
+}
+
+header .menu li a:hover {
+    color: #FF5733;
+}
+
+
+/* Custom Button */
+.custom-btn {
+    width: 120px;
+    padding: 15px;
+    margin-top: 10px;
+    margin-left: -10px;
+    border-radius: 30px;
+    font-weight: 500;
+    border: 2px solid transparent;
+    color: #FFF;
+    cursor: pointer;
+    background-color: transparent;
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    line-height: normal;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.custom-btn::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    left: 0;
+    top: 0;
+    border-radius: 30px;
+    z-index: -1;
+}
+
+.custom-btn::before {
+    content: "";
+    background: linear-gradient(45deg, #FF0000, #FF7300, #FFFB00, #48FF00, #00FFD5, #002BFF, #FF00C8, #FF0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+    border-radius: 30px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.custom-btn:hover::before {
+    opacity: 1;
+}
+
+.custom-btn:active::after {
+    background: transparent;
+}
+
+.custom-btn:active {
+    color: #000;
+    font-weight: bold;
+}
+
+/* Slider */
+.slider {
     height: 100vh;
     margin-top: -50px;
     position: relative;
 }
-.slider .list .item{
+
+.slider .list .item {
     position: absolute;
     inset: 0 0 0 0;
     overflow: hidden;
     opacity: 0;
-    transition: .5s;
+    transition: 0.5s;
 }
-.slider .list .item img{
+
+.slider .list .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.slider .list .item::after{
+
+.slider .list .item::after {
     content: '';
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     bottom: 0;
-    background-image: linear-gradient(
-        to top, #000 40%, transparent
-    );
+    background-image: linear-gradient(to top, #000 40%, transparent);
 }
-.slider .list .item .content{
+
+.slider .list .item .content {
     position: absolute;
     left: 10%;
-    top: 20%;
+    top: 10%;
     width: 500px;
     max-width: 80%;
     z-index: 1;
 }
-.slider .list .item .content p:nth-child(1){
+
+.slider .list .item .content p:nth-child(1) {
     text-transform: uppercase;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
+    font-weight: bold;
 }
-.slider .list .item .content h2{
-    font-size: 100px;
+
+.slider .list .item .content h2 {
+    font-size: 80px;
     margin: 0;
 }
-.slider .list .item.active{
+
+.slider .list .item.active {
     opacity: 1;
     z-index: 10;
 }
+
 @keyframes showContent {
-    to{
+    to {
         transform: translateY(0);
         filter: blur(0);
         opacity: 1;
     }
 }
+
 .slider .list .item.active p:nth-child(1),
 .slider .list .item.active h2,
-.slider .list .item.active p:nth-child(3){
+.slider .list .item.active p:nth-child(3),
+.slider .list .item.active .custom-btn {
     transform: translateY(30px);
     filter: blur(20px);
     opacity: 0;
-    animation: showContent .5s .7s ease-in-out 1 forwards;
+    animation: showContent 0.5s 0.7s ease-in-out 1 forwards;
+    font-weight: bold;
 }
-.slider .list .item.active h2{
+
+.slider .list .item.active h2 {
     animation-delay: 1s;
 }
-.slider .list .item.active p:nth-child(3){
+
+.slider .list .item.active p:nth-child(3) {
     animation-duration: 1.3s;
 }
-.arrows{
+
+.arrows {
     position: absolute;
-    top: 30%;
-    right: 50px;
+    top: 40%;
+    right: 18%;
     z-index: 100;
 }
-.arrows button{
+
+.arrows button {
     background-color: #eee5;
     border: none;
     font-family: monospace;
@@ -117,15 +212,17 @@ header .menu{
     border-radius: 5px;
     font-size: x-large;
     color: #eee;
-    transition: .5s;
+    transition: 0.5s;
 }
-.arrows button:hover{
+
+.arrows button:hover {
     background-color: #eee;
     color: black;
 }
-.thumbnail{
+
+.thumbnail {
     position: absolute;
-    bottom: 50px;
+    bottom: 1px;
     z-index: 11;
     display: flex;
     gap: 10px;
@@ -136,37 +233,64 @@ header .menu{
     overflow: auto;
     justify-content: center;
 }
-.thumbnail::-webkit-scrollbar{
+
+.thumbnail::-webkit-scrollbar {
     width: 0;
 }
-.thumbnail .item{
+
+.thumbnail .item {
     width: 150px;
     height: 220px;
-    filter: brightness(.5);
-    transition: .5s;
+    filter: brightness(0.5);
+    transition: 0.5s;
     flex-shrink: 0;
 }
-.thumbnail .item img{
+
+.thumbnail .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
 }
-.thumbnail .item.active{
+
+.thumbnail .item.active {
     filter: brightness(1.5);
 }
-.thumbnail .item .content{
+
+.thumbnail .item .content {
     position: absolute;
     inset: auto 10px 10px 10px;
 }
+
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
 @media screen and (max-width: 678px) {
-    .thumbnail{
+    .thumbnail {
         justify-content: start;
     }
-    .slider .list .item .content h2{
+    .slider .list .item .content h2 {
         font-size: 60px;
     }
-    .arrows{
+    .arrows {
         top: 10%;
+    }
+}
+
+@media screen and (min-width: 414px) and (max-width: 768px) {
+    .slider .list .item .content {
+        margin-top: 70px; 
+    }
+    .arrows {
+        right: 60px;
     }
 }
