--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ header .menu li a:hover {
     text-transform: uppercase;
     letter-spacing: 5px;
     font-weight: bold;
+    text-align: justify;
 }
 
 .slider .list .item .content h2 {
@@ -179,7 +180,14 @@ header .menu li a:hover {
 
 .slider .list .item.active p:nth-child(1),
 .slider .list .item.active h2,
-.slider .list .item.active p:nth-child(3),
+.slider .list .item.active p:nth-child(3){
+    transform: translateY(30px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent 0.5s 0.7s ease-in-out 1 forwards;
+    font-weight: bold;
+    text-align: justify;
+}
 .slider .list .item.active .custom-btn {
     transform: translateY(30px);
     filter: blur(20px);
